--- a/flask-app/templates/riwayat_transaksi.html
+++ b/flask-app/templates/riwayat_transaksi.html
@@ -5,7 +5,7 @@
         {% block head%}
             <title>Manajemen Siswa - Sistem Pembayaran DJ</title>
             <!-- JS Script -->
-            <script>document.title = "Manajemen Siswa - Sistem Pembayaran DJ"</script>
+            <script>document.title = "Riwayat Transaksi - Sistem Pembayaran DJ"</script>
             <script src="{{ url_for('static', filename='Javascript/filter_siswa.js') }}" type="text/javascript"></script>
         {% endblock %}
     </head>
@@ -16,11 +16,11 @@
             <h1 class="page-title">Riwayat Transaksi Sekolah Daarul Jannah</h1>
             <h4 class="sub-title">Sistem Keuangan Sekolah Daarul Jannah</h4>
 
-            <div class="filter">
+            <!-- <div class="filter">
                 <div class="filter-kiri">
                     <select class="filter-tingkat" id="filter-tingkat" onchange="filterTingkat()" title="Filter Tingkat Pendidikan">
                         <option value="Tingkat" disabled selected hidden>Tingkat</option>
-                        <!-- <option value="">Semua Tingkat</option> -->
+                        <option value="">Semua Tingkat</option>
                         <option value="TK">TK</option>
                         <option value="SD" >SD</option>
                         <option value="SMP">SMP</option>
@@ -31,12 +31,12 @@
                     </select>
                 </div>
                 <div class="filter-kanan">
-                    <!-- <a href="/tambah_siswa">
+                    <a href="/tambah_siswa">
                         <p class="p-btn btn shadow">Tambah Data Siswa/i</p>
-                    </a> -->
+                    </a>
                     <div class="search-bar">
                         <select id="search-bar-filter" onchange="searchBarClear()">
-                            <!-- <option value="">Semua Tingkat</option> -->
+                            <option value="">Semua Tingkat</option>
                             <option value="NIS" selected>NIS</option>
                             <option value="Nama">Nama</option>
                             <option value="Kelas">Kelas</option>
@@ -44,10 +44,10 @@
                         <input type="text" placeholder="Cari Berdasarkan NIS" id="search-txt" onkeyup="searchBar()">
                     </div>
                 </div>
-            </div>
+            </div> -->
             
-            <div class="table" id="tabel_siswa">
-                <table class="shadow coll" style="overflow-x: auto;">
+            <div class="table">
+                <table class="shadow coll" style="overflow-x: auto;" id="tabel-transaksi">
                     <tr>
                         <th>No</th>
                         <th>NIS</th>
@@ -65,86 +65,52 @@
                         <th>Total</th>
                         <!-- <th>Menu Fungsi</th> -->
                     </tr>
-                    {% for siswa_tk in siswa_tk %}
+                    {% for pembayaran in pembayaran %}
                     <tr>
                         <td>{{ loop.index }}</td>
-                        <td>{{ siswa_tk.nis }}</td>
+                        <td>{{ pembayaran.nis }}</td>
                         <td class="tb-name">
-                            {{siswa_tk.nama_siswa}}
+                            {{pembayaran.nama_siswa}}
                         </td>
-                        <td>{{ siswa_tk.jenis_kelamin }}</td>
-                        <td>{{ siswa_tk.status }}</td>
-                        <td> TK </td>
-                        <td>{{ siswa_tk.kelas }}</td>
+                        <td>{{ pembayaran.pembayaran_periode_bulan }} - {{pembayaran.pembayaran_periode_ta}}</td>
+                        <td>{{ pembayaran.waktu_pembayaran }}</td>
+                        <td>{{ pembayaran.spp }}</td>
+                        <td>{{ pembayaran.tabungan_wajib }}</td>
                         <td >
-                            {{siswa_tk.nama_siswa}}
+                            {{pembayaran.katering}}
                         </td>
-                        <td>{{ siswa_tk.jenis_kelamin }}</td>
-                        <td>{{ siswa_tk.status }}</td>
-                        <td> TK </td>
-                        <td>{{ siswa_tk.kelas }}</td>
+                        <td>{{ pembayaran.jemputan }}</td>
+                        <td>{{ pembayaran.ekskul }}</td>
+                        <td>{{ pembayaran.majelis_sekolah }}</td>
+                        <td>{{ pembayaran.kelas_berbakat }}</td>
+                        <td>{{ pembayaran.bimbel }}</td>
+                        <td>{{ pembayaran.total }}</td>
                         <!-- <td class="row" style="justify-content:center ;">
-                            <a href="{{ url_for('detail_siswa', nis = siswa_tk['nis']) }}" class="btn-2 fungsi" title="Detail Siswa">
-                                <i class="fa-solid fa-id-card"></i>
-                            </a>
-                            <a href="{{ url_for('riwayat_pembayaran', nis = siswa_tk['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
-                                <i class="fi fi-sr-ballot"></i>
-                            </a>
-                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_tk['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
-                                <i class="fi fi-sr-money-check-edit"></i>
-                            </a>
                         </td> -->
-                    </tr>
-                    {% endfor%}
-                    {% for siswa_sd in siswa_sd %}
-                    <tr>
-                        <td>{{ siswa_sd.nis }}</td>
-                        <td>{{siswa_sd.nama_siswa}}
-                            
-                        </td>
-                        <td>{{ siswa_sd.jenis_kelamin }}</td>
-                        <td>{{ siswa_sd.status }}</td>
-                        <td> SD </td>
-                        <td>{{ siswa_sd.kelas }}</td>
-                        <td class="row" style="justify-content:center ;">
-                            <a href="{{ url_for('detail_siswa', nis = siswa_sd['nis']) }}" class="btn-2 fungsi" title="Detail Siswa">
-                                <i class="fa-solid fa-id-card"></i>
-                            </a>
-                            <a href="{{ url_for('riwayat_pembayaran', nis = siswa_sd['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
-                                <i class="fi fi-sr-ballot"></i>
-                            </a>
-                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_sd['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
-                                <i class="fi fi-sr-money-check-edit"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endfor%}
-                    {% for siswa_smp in siswa_smp %}
-                    <tr>
-                        <td>{{ siswa_smp.nis }}</td>
-                        <td>{{siswa_smp.nama_siswa}}
-                            
-                        </td>
-                        <td>{{ siswa_smp.jenis_kelamin }}</td>
-                        <td>{{ siswa_smp.status }}</td>
-                        <td> SMP </td>
-                        <td>{{ siswa_smp.kelas }}</td>
-                        <td class="row" style="justify-content:center ;">
-                            <a href="{{ url_for('detail_siswa', nis = siswa_smp['nis']) }}" class="btn-2 fungsi" title="Detail Siswa">
-                                <i class="fa-solid fa-id-card"></i>
-                            </a>
-                            <a href="{{ url_for('riwayat_pembayaran', nis = siswa_smp['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
-                                <i class="fi fi-sr-ballot"></i>
-                            </a>
-                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_smp['nis']) }}" class="btn-2 fungsi" title="Pembayaran">
-                                <i class="fi fi-sr-money-check-edit"></i>
-                            </a>
-                        </td>
                     </tr>
                     {% endfor%}
                 </table>
             </div>
         </div>
+        <script>
+            var tabel = document.getElementById("tabel-transaksi");
+            var rows = tabel.getElementsByTagName("td");
+            for (var i = 0; i < rows.length; i++) {
+                if(i%14!=0 && (i-1)%14!=0 && (i-4)%14!=0){
+                    if (parseInt(rows[i].innerHTML) > 0){
+                        rows[i].innerHTML = new Intl.NumberFormat('id-ID', {
+                            style: 'currency',
+                            currency: 'IDR'
+                            }).format(rows[i].innerHTML);
+                    }
+                }
+            }
+            for (var i = 0; i < rows.length; i++) {
+                if (parseInt(rows[i].innerHTML) == 0){
+                    rows[i].innerHTML = "-";
+                }
+            }
+        </script>
         <script src="{{url_for('static', filename='Javascript/riwayattrans_active_class.js')}}">   </script>
         {% endblock %}
     </body>
